<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:id="@+id/click_capture_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivFrontImage1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:src="@drawable/fn_upload" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_to_capture_and_detect_image_for_safety"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/click_capture_bike_helmet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivFrontImage2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:src="@drawable/fn_upload" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/click_to_capture_and_detect_image_for_bike_helmet_only"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/showFrontImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:src="@drawable/fn_upload"
        android:visibility="gone" />

    <TextView
        android:id="@+id/save_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_back"
        android:paddingLeft="50dp"
        android:paddingTop="10dp"
        android:paddingRight="50dp"
        android:paddingBottom="10dp"
        android:text="@string/upload_image"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/startTracking"
        android:layout_width="330sp"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_back"
        android:text="@string/start_tracking"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="visible" />

</LinearLayout>