<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/please_mark_the_correctness_of_data_in_front_of_all_the_parameters"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/lytHarness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <TextView
                android:id="@+id/tvHarness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/harness_true"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnHarnessCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/tvHarness"
                android:text="@string/correct"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnHarnessNotCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/btnHarnessCorrect"
                android:text="@string/not_correct"
                android:textColor="@color/black"
                android:textSize="10sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lytSafetyHelmet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytHarness">

            <TextView
                android:id="@+id/tvSafetyHelmet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/harness_true"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSafetyHelmetCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/tvSafetyHelmet"
                android:text="@string/correct"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSafetyHelmetNotCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/btnSafetyHelmetCorrect"
                android:text="@string/not_correct"
                android:textColor="@color/black"
                android:textSize="10sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lytLadder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytSafetyHelmet">

            <TextView
                android:id="@+id/tvLadder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/harness_true"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLadderCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/tvLadder"
                android:text="@string/correct"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLadderNotCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/btnLadderCorrect"
                android:text="@string/not_correct"
                android:textColor="@color/black"
                android:textSize="10sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lytSafetyJacket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytLadder">

            <TextView
                android:id="@+id/tvSafetyJacket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/harness_true"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSafetyJacketCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/tvSafetyJacket"
                android:text="@string/correct"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSafetyJacketNotCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/btnSafetyJacketCorrect"
                android:text="@string/not_correct"
                android:textColor="@color/black"
                android:textSize="10sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lytWorker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytSafetyJacket">

            <TextView
                android:id="@+id/tvWorker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/harness_true"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnWorkerCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/tvWorker"
                android:text="@string/correct"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnWorkerNotCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/btnWorkerCorrect"
                android:text="@string/not_correct"
                android:textColor="@color/black"
                android:textSize="10sp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lytBikeHelmet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytWorker">

            <TextView
                android:id="@+id/tvBikeHelmet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/harness_true"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBikeHelmetCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/tvBikeHelmet"
                android:text="@string/correct"
                android:textColor="@color/black"
                android:textSize="10sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBikeHelmetNotCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/btnBikeHelmetCorrect"
                android:text="@string/not_correct"
                android:textColor="@color/black"
                android:textSize="10sp" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytBikeHelmet" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

